# chatger-tui

./: .gitignore  Cargo.toml  PROTOCOL.txt  README.md  flake.nix  mprocs.yaml  toolchain.toml
.cargo/: config.toml
.github/workflows/: pipeline.yaml
assets/: penger.txt  penger_title.txt
src/: cli.rs  main.rs
src/network/: client.rs  mod.rs  protocol.rs
src/network/protocol/: client.rs  header.rs  mod.rs  server.rs
src/tui/: chat.rs  events.rs  framework.rs  logs.rs  mod.rs
src/tui/screens/: mod.rs
src/tui/screens/chat/: borders.rs  keys.rs  mod.rs  state.rs  ui.rs
src/tui/screens/login/: keys.rs  mod.rs  state.rs  ui.rs
src/tui/ui/: borders.rs  mod.rs
