[package]
name = "chatger-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chatgertui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
log = { version = "0.4.27", features = ["std"] }
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"
chrono = "0.4.41"
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }

[lints.rust]
unused_imports = "allow"
unused = { level = "allow", priority = -1 }
dead_code = "allow"
