[package]
name = "chatger-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chatgertui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
log = { version = "0.4.27",  default-features = false, features = ["std"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "time", "net", "io-util",  "sync", "parking_lot"] }
async-trait = "0.1.88"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1.0.98"
clap = { version = "4.5.40", default-features = false, features = ["derive", "std"] }
rustls = "0.23.29"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.2"

[lints.rust]
unused_imports = "allow"
unused = { level = "allow", priority = -1 }
dead_code = "allow"

[profile.release]
opt-level = 3          
lto = true
codegen-units = 1
panic = "abort"
strip = true
